2002-09-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp:
	* libutil++/string_manip.h: sample_filename() new
	
	* pp/samples_container.cpp:
	* pp/samples_container.h: add_samples() new
	
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/oprofpp.cpp:
	* pp/samples_file.cpp: use them + minor cleanup

2002-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libopt++/popt_options.cpp: fix #615760, in rare case
	  oprofpp called with lot of invalid arguments segfault
	  during the help printing. All post-profile tools are
	  concerned by this fix.

	* doc/oprofile.xml: small improvements

	* libutil++/op_bfd.cpp: improve error message when bfd_openr() fails.
	
	* TODO: update

2002-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_parse_proc.c:
	* dae/opd_parse_parse.h:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* daemon/opd_sample_files.c:
	* libop/op_cpu_type.c:
	* libop/op_events.c:
	* libop/op_events_desc.c:
	* libopt++/popt_options.cpp:
	* libutil/op_deviceio.c:
	* libutil/op_file.c:
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h:
	* libutil++/string_manip.h:
	* pp/op_to_source.cpp: doxygen fix

2002-09-27  John Levon  <levon@movementarian.org>

	* configure.in: add --with-kernel-support for 2.5
 
	* daemon/oprofiled.c: fix comment, give exit message on sig

	* utils/Makefile.in:
	* utils/op_stop_25: add 2.5 op_stop, no 2.5 op_dump

	* utils/op_start_25: use enable
 
2002-09-25  Bob Montgomery  <bobm@fc.hp.com>

	* module/oprofile.c: avoid to dump zero samples count, fix #615087

2002-09-25  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c: fix #615166, ensure we recognize an
	  existing image struct so we don't try to create db_tree_t
	  object for the same samples files.
	* db/db-debug.c: display page index when something goes wrong
	* db/db-insert.c: be more strict on assertion

2002-09-25  Philippe Elie  <phil.el@wanadoo.fr>
